Added inheritance example

--- a/DependencyInjectionDemo/appsettings.json
+++ b/DependencyInjectionDemo/appsettings.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "ExternalConnections": {
-    "ExampleConfiguration": {
+    "OldConfiguration": {
       "Name": "Configuration 1",
       "Address": "https://www.example.com"
     },
-    "TestConfiguration": {
+    "NewConfiguration": {
       "Name": "Configuration 2",
       "Address": "https://www.test.com"
     }
