Added usage of inheritance method, changed config for clarity

--- a/DependencyInjectionDemo/appsettings.json
+++ b/DependencyInjectionDemo/appsettings.json
@@ -9,11 +9,11 @@
   "AllowedHosts": "*",
   "ExternalConnections": {
     "OldConfiguration": {
-      "Name": "Configuration 1",
+      "Name": "Old Configuration",
       "Address": "https://www.example.com"
     },
     "NewConfiguration": {
-      "Name": "Configuration 2",
+      "Name": "New Configuration",
       "Address": "https://www.test.com"
     }
   }
